Updated to resolve several issues 123, 112, 107, 77, 75

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -11,7 +11,7 @@ scenario.outputs.relative                             = @SCENARIO.NAME@/@SCENARI
 scenario.inputs                                       = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@
 scenario.outputs                                      = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@
 scenario.root                                         = @ROOT.DIR@/@SCENARIO.NAME@
-visum.version                                         = 18
+visum.version                                         = 20
 new.zone.system                                       = False
 
 #python.visum.executable required by Java SI module and should be the same as python.executable
@@ -621,7 +621,7 @@ sdt.current.mode.choice.logsums=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@
 sdt.current.employment = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Employment.csv
 sdt.workplace.locations=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/workPlaceLocations.csv
 sdt.debug.files = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/debug/
-sdt.person.tours=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Tours_SDT.csv
+#sdt.person.tours=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Tours_SDT.csv
 sdt.person.patterns=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Patterns_SDT.csv
 sdt.household.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/householdData.csv
 sdt.person.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/personData.csv
@@ -699,14 +699,14 @@ et.basis.year = 8
 
 ################################## TA Properties ##################################
 ta.python.file = @ROOT.DIR@/@SCENARIO.NAME@/model/code/visum/SWIM_VISUM_Main.py
-si.activityconstraintsi.worldmarkets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/ActivityConstraintsIWorldMarkets.csv
+#si.activityconstraintsi.worldmarkets = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/ActivityConstraintsIWorldMarkets.csv
 si.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/si.properties
 ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/ta.properties
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15_popsim.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/swimNetwork2010_15_popsim.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_03_HIST_00_2010.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_03_HIST_00_2010.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
@@ -810,10 +810,10 @@ swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/swimr_render_rmd
 # SWIMR_compare -------------
 # "Current" database is viz.final.db above
 # "Reference" database:
-swimr.reference.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
+swimr.reference.db = M:/swim2/Ref25_0_03_issue112/outputs/Ref25_0_03_issue112.db
 
 # SWIMR_popemp ---------------
 # "Current" database is viz.final.db above
 # "Reference" database is swimr.reference.db above
 # "Compare" database is:
-swimr.compare.db = D:/swim2/Ref25_0_01_18/outputs/Ref25_0_01_18.db
+swimr.compare.db = M:/swim2/Ref25_0_03_issue112/outputs/Ref25_0_03_issue112.db
