updating branch to 2.6 file

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -366,8 +366,7 @@ aa.command.java = @ROOT.DIR@/model/lib/java8/jre/bin/java.exe
 # 3000m might be all that's required, but we have a lot more memory nowadays so lets use it.
 aa.command.max.heap.size = 6000m
 aa.command.log4j.config.file = info_log4j_aa.xml
-aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/commons-math3-3.4.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.9_r4604.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r2753.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r1504.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r4526.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
-#aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/*;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/commons-math3-3.4.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.10_r9021.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r8039.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/netlib-java-0.9.3.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/arpack_combined_all.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2.9.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-8.4-701.jdbc4.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r2580.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r8310.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
@@ -377,8 +376,8 @@ aa.base.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 ald.input.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@ALD.LAST.RUN@/
 
 #use SPG1 or POPSIMSPG1
-spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG1.LAST.RUN@/
-#spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG1.LAST.RUN@/
+#spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG1.LAST.RUN@/
+spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG1.LAST.RUN@/
 
 aa.floorspace.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.current.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
@@ -398,7 +397,9 @@ aa.NEDandALDInputs=true
 aa.readHouseholdsByHHCategory=false
 aa.readActivityDollarDataForPI=true
 aa.updateImportsAndExports=false
+aa.technologyScaling=true
 aa.visum=true
+aa.doInputProcessing=false
 
 # Alternate property if you want to build your own PECASZonesI.csv file manually and not have it clobbered.
 # aa.buildZoneFiles=false
@@ -441,13 +442,14 @@ aa.splitOutputToFloorspaceZones=true
 aa.makeTripMatrices=false
 
 # Run parameters
-aa.logFrequency = 25
+aa.logFrequency = 10
 aa.maxIterations = 2000
-aa.initialStepSize = .002
+aa.initialStepSize = .00005
 aa.minimumStepSize = .025
 aa.maximumStepSize = 2.5
 aa.localPriceStepSizeAdjustment = 1
 aa.automaticTechnologySizeTerms=true
+aa.allPriceChangesMustRespectLocalSign=true
 aa.maxTotalClearance=0.00001
 # Change to 0.01 or less.
 aa.maxSpecificClearance=0.02
@@ -607,8 +609,8 @@ pi.beta.labor.flows=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@
 ## Input files from SPG
 
 #Use SPG2 or POPSIMSPG2
-spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG2.LAST.RUN@/SynPop_Taz_Summary.csv
-#spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG2.LAST.RUN@/SynPop_Taz_Summary.csv
+#spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@SPG2.LAST.RUN@/SynPop_Taz_Summary.csv
+spg2.previous.synpop.summary=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG2.LAST.RUN@/SynPop_Taz_Summary.csv
 
 #these have to last for a whole multiyear run, so must exist outside of tyear framework
 daf.command.file.dir = @ROOT.DIR@/@SCENARIO.NAME@/model/config
@@ -621,7 +623,6 @@ sdt.current.mode.choice.logsums=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@
 sdt.current.employment = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Employment.csv
 sdt.workplace.locations=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/workPlaceLocations.csv
 sdt.debug.files = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/debug/
-#sdt.person.tours=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Tours_SDT.csv
 sdt.person.patterns=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Patterns_SDT.csv
 sdt.household.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/householdData.csv
 sdt.person.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/personData.csv
@@ -705,8 +706,8 @@ ta.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTER
 tr.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/tr.properties
 
 ta.demand.output.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_03_HIST_00_2010.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM25_0_03_HIST_00_2010.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM26_0_01_HIST_00_2010.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_0_01_HIST_00_2010.ver
 ta.peak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PK_PATHS.ver
 ta.offpeak.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/OP_PATHS.ver
 ta.pm.paths.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/PM_PATHS.ver
@@ -810,10 +811,10 @@ swimr.render.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/swimr_render_rmd
 # SWIMR_compare -------------
 # "Current" database is viz.final.db above
 # "Reference" database:
-swimr.reference.db = M:/swim2/Ref25_0_03_issue112/outputs/Ref25_0_03_issue112.db
+swimr.reference.db = D:/swim2/Ref26_0_01/outputs/Ref26_0_01.db
 
 # SWIMR_popemp ---------------
 # "Current" database is viz.final.db above
 # "Reference" database is swimr.reference.db above
 # "Compare" database is:
-swimr.compare.db = M:/swim2/Ref25_0_03_issue112/outputs/Ref25_0_03_issue112.db
+swimr.compare.db = D:/swim2/Ref26_0_01/outputs/Ref26_0_01.db
