changes to make the new NED script work. Issue #86

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -163,6 +163,17 @@ ned.population_forecast.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@C
 ned.trade_forecast.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/trade_forecast.csv
 ned.government_forecast.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/government_forecast.csv
 
+#new properties added for the new script
+#prior year for feedback
+ned.prior_activity_summary.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@NED.LAST.RUN@/ActivitySummary.csv
+ned.reference_prior_activity_summary.path = D:/swim2/Ref26_0_01/outputs/t@NED.LAST.RUN@/ActivitySummary.csv
+#feedback is active only if "ned.feedback_elasticity !=0 and this_year > ned.ref_scenario_base_year". where, this_year = ned.model.year + ned.base.year - ned.base.year.model.year
+#ex. for t20, this_year = 20 + 2009 - 19 = 2010. 2010 is not less than 2016 therefore feedback would not be active. 
+#t27 (2017) will be the first year where feedback will be active if elasticity !=0
+#ned.feedback_elastiicy - needs tests/guidance to come up with a reasonable value. 
+ned.feedback_elasticity=1.2
+ned.ref_scenario_base_year=2016 
+
 ned.input.directory=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0
 ned.base.year=2009
 ned.base.year.model.year=19
