Added the changes to the global template and supporting files to process the latest FAF4 data

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -166,7 +166,9 @@ ned.government_forecast.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@C
 #new properties added for the new script
 #prior year for feedback
 ned.prior_activity_summary.path = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@NED.LAST.RUN@/ActivitySummary.csv
-ned.reference_prior_activity_summary.path = D:/swim2/Ref26_0_01/outputs/t@NED.LAST.RUN@/ActivitySummary.csv
+#this path to be provided by ODOT
+#ned.reference_prior_activity_summary.path = D:/swim2/Ref26_0_01/outputs/t@NED.LAST.RUN@/ActivitySummary.csv
+ned.reference_prior_activity_summary.path = D:/Projects/Clients/OR_DOT/SWIM_WOC7/Models/BaseYear/Development/Ref26_0_01/outputs/t@NED.LAST.RUN@/ActivitySummary.csv
 #feedback is active only if "ned.feedback_elasticity !=0 and this_year > ned.ref_scenario_base_year". where, this_year = ned.model.year + ned.base.year - ned.base.year.model.year
 #ex. for t20, this_year = 20 + 2009 - 19 = 2010. 2010 is not less than 2016 therefore feedback would not be active. 
 #t27 (2017) will be the first year where feedback will be active if elasticity !=0
@@ -673,8 +675,9 @@ ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVA
 ct.synthetic.population = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
 
 # CT input paramters
-faf.flow.data               = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf42_oregon.csv.gz
+faf.flow.data               = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/FAF4.5.1.csv
 ct.destination.utilities    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
+ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_or_outer_regions.csv
 ct.external.gateways        = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
 ct.generation.probabilities = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
 ct.intermodal.connectors    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
@@ -685,7 +688,8 @@ faf.empty.truck.factors       = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/fa
 faf.truck.allocation.factors  = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf35-truck-allocation-factors.csv
 faf.truck.equivalency.factors = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf35-truck-equivalency-factors.csv
 
-faf.external.scaling.factor = 2.5
+faf.value.deflator             = 0.938
+faf.external.scaling.factor    = 2.5
 ct.random.seed                 = 630730
 ct.extended.trace              = FALSE
 ct.target.week                 = 23
