exposed aa base year in the global properties file. Issue #75.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -381,6 +381,7 @@ aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/commons-math3-3.
 aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 
 # Path for input files
+aa.base.year = 19
 aa.reference.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 aa.base.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 
