Updated SWIM_VISUM_Main script to not use ActivityTotalsI as a template to create the same file as discussed in #128. Need to test removal of 'ActivityTotalsI.csv' file

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -40,6 +40,8 @@ daf.admin.port = 9067
 agforest.floorspace.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/AgForestFloorspace.csv
 world.market.fieldnames.file = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/worldMarketFields.csv
 
+#AA activity totals (Inputs fixed)
+aa.activity.totals.other = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ActivityTotalsIOtherValues.csv
 #AA activity totals (need to be updated by Visum)
 aa.activity.totals = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ActivityTotalsI.csv
 
