Updating default feedback property to zero with guidance in the comments

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -172,8 +172,9 @@ ned.reference_prior_activity_summary.path = D:/swim2/Ref26_0_01/outputs/t@NED.LA
 #feedback is active only if "ned.feedback_elasticity !=0 and this_year > ned.ref_scenario_base_year". where, this_year = ned.model.year + ned.base.year - ned.base.year.model.year
 #ex. for t20, this_year = 20 + 2009 - 19 = 2010. 2010 is not less than 2016 therefore feedback would not be active. 
 #t27 (2017) will be the first year where feedback will be active if elasticity !=0
-#ned.feedback_elastiicy - needs tests/guidance to come up with a reasonable value. 
-ned.feedback_elasticity=1.2
+#ned.feedback_elastiicy guidance is to bookend feedback scenarios by running both 0.5 and 1.0 and providing range of results
+# if time does not allow for this, the best current guidance is to set feedback at 0.75.
+ned.feedback_elasticity=0 
 ned.ref_scenario_base_year=2016 
 
 ned.input.directory=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t0
