This commit addresses issue #52.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -48,6 +48,7 @@ aa.activity.totals = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ActivityTotals
 #ALLZONESFILENAME
 all.zones.file = @ROOT.DIR@/@SCENARIO.NAME@/outputs/t@CURRENT.INTERVAL@/AllZones.csv
 #in these commands, |...| is used to indicate property references
+viz.final.year = @VIZ.FINAL.YEAR@
 viz.build.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/build_Viz_DB.R
 viz.combine.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/viz/all_Viz_DB.R
 viz.build.command.list = [|r.executable|,--no-save,<,|viz.build.script|,>,logVizDB.txt,ALLZONESFILENAME="|all.zones.file|",D211FILE="|d211.fileName|",EXATTFILE="|extraAttribs.fileName|",SPATIALONLY=F]
