Created faf folder to host the FAF files and updated globalTemplate.properties file to point to FAF data source. Issue #88

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -679,7 +679,7 @@ ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVA
 ct.synthetic.population = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
 
 # CT input paramters
-faf.flow.data               = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/FAF4.5.1.csv
+faf.flow.data               = &@ROOT.DIR@/model/faf/FAF4.5.1.csv
 ct.destination.utilities    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
 ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_or_outer_regions.csv
 ct.external.gateways        = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
