Addresses updates to populationsim (multiprocessing) #135

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -16,8 +16,9 @@ new.zone.system                                       = False
 
 #python.visum.executable required by Java SI module and should be the same as python.executable
 java.executable      = @ROOT.DIR@/model/lib/java8/jre/bin/java.exe
-python.executable    = @ROOT.DIR@/model/lib/swimpy/python.exe
-python.visum.executable = @ROOT.DIR@/model/lib/swimpy/python.exe
+python.executable    = @ROOT.DIR@/model/lib/Python27/python.exe
+python.visum.executable = @ROOT.DIR@/model/lib/Python27/python.exe
+python.popsim.executable = @ROOT.DIR@/model/lib/swimpy/python.exe
 r.executable         = @ROOT.DIR@/model/lib/R-3.3.2/bin/x64/R.exe
 seven.zip.executable = @ROOT.DIR@/model/lib/7za.exe
 pandoc.executable = @ROOT.DIR@/model/lib/pandoc/pandoc.exe
@@ -265,6 +266,9 @@ hseed_ca = @ROOT.DIR@/model/census/psam_h06.csv
 
 seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_households.csv
 seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_persons.csv
+
+## SPG2 related properties
+spg2.num.processors = 2
 
 #config files for SPG1 and SPG2
 controls.csv.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/controls.csv
