--- a/root/scenario/inputs/parameters/PopulationSimBase/SPG2/logging.yaml
+++ b/root/scenario/inputs/parameters/PopulationSimBase/SPG2/logging.yaml
@@ -9,23 +9,23 @@ logging:
 
   # Configuring the default (root) logger is highly recommended
   root:
-    level: !!python/name:logging.NOTSET
+    level: NOTSET
     handlers: [console]
 
   loggers:
 
     populationsim:
-      level: !!python/name:logging.DEBUG
+      level: DEBUG
       handlers: [console, logfile]
       propagate: false
 
     activitysim:
-      level: !!python/name:logging.DEBUG
+      level: DEBUG
       handlers: [console, logfile]
       propagate: false
 
     orca:
-      level: !!python/name:logging.WARN
+      level: WARN
       handlers: [console, logfile]
       propagate: false
 
@@ -33,28 +33,27 @@ logging:
 
     logfile:
       class: logging.FileHandler
-      filename: !!python/object/apply:activitysim.core.tracing.log_file_path ['asim.log']
+      filename: !!python/object/apply:activitysim.core.config.log_file_path ['activitysim.log']
       mode: w
       formatter: fileFormatter
-      level: !!python/name:logging.NOTSET
+      level: NOTSET
 
     console:
       class: logging.StreamHandler
       stream: ext://sys.stdout
       formatter: simpleFormatter
-      #level: !!python/name:logging.NOTSET
-      level: !!python/name:logging.INFO
+      #level: NOTSET
+      level: INFO
 
   formatters:
 
     simpleFormatter:
-      class: !!python/name:logging.Formatter
+      class: logging.Formatter
       # format: '%(levelname)s - %(name)s - %(message)s'
       format: '%(levelname)s - %(message)s'
       datefmt: '%d/%m/%Y %H:%M:%S'
 
     fileFormatter:
-      class: !!python/name:logging.Formatter
+      class: logging.Formatter
       format: '%(asctime)s - %(levelname)s - %(name)s - %(message)s'
       datefmt: '%d/%m/%Y %H:%M:%S'
-
