Updated files require to run PopulationSim module in multiprocessing for SPG2 #135

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -269,6 +269,7 @@ seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/Populatio
 
 ## SPG2 related properties
 spg2.num.processors = 2
+spg2.max.iterations = 1000
 
 #config files for SPG1 and SPG2
 controls.csv.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/controls.csv
