--- a/root/scenario/inputs/parameters/PopulationSimBase/SPG2/settings.yaml
+++ b/root/scenario/inputs/parameters/PopulationSimBase/SPG2/settings.yaml
@@ -15,6 +15,7 @@ GROUP_BY_INCIDENCE_SIGNATURE: True
 USE_SIMUL_INTEGERIZER: True
 USE_CVXPY: False
 max_expansion_factor: 15
+MAX_BALANCE_ITERATIONS_SIMULTANEOUS: @POPSIMSPG2.MAX.ITERATIONS@
 
 
 # Geographic Settings
