Addressed the issue #88 ct model update

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -268,8 +268,8 @@ seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/Popula
 seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_persons.csv
 
 ## SPG2 related properties
-spg2.num.processors = 2
-spg2.max.iterations = 1000
+spg2.num.processors = 4
+spg2.max.iterations = 200
 
 #config files for SPG1 and SPG2
 controls.csv.spg1 = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/SPG1/controls.csv
@@ -686,16 +686,19 @@ ct.synthetic.population = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRE
 # CT input paramters
 faf.flow.data               = &@ROOT.DIR@/model/faf/FAF4.5.1.csv
 ct.destination.utilities    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
-ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_or_outer_regions.csv
+#ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_or_outer_regions.csv
+ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_regions.csv
 ct.external.gateways        = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
 ct.generation.probabilities = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
 ct.intermodal.connectors    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
 ct.sector.equivalencies     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
 ct.temporal.factors         = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
 ct.trip.length.targets      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
-faf.empty.truck.factors       = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf45-empty-truck-factors.csv
-faf.truck.allocation.factors  = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf45-truck-allocation-factors.csv
-faf.truck.equivalency.factors = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf45-truck-equivalency-factors.csv
+ct.cvs.payload.wt.dist      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_payload_weight_distributions.csv
+ct.cvs.stop.pattern.freq      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_stop_pattern_frequencies.csv
+faf.empty.truck.factors       = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_empty_truck_factors.csv
+faf.truck.allocation.factors  = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_allocation_factors.csv
+faf.truck.equivalency.factors = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_equivalency_factors.csv
 
 faf.value.deflator             = 0.938
 faf.external.scaling.factor    = 2.5
