Added AA related updates

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -383,7 +383,7 @@ acs.person.variables = SEX AGEP SCH ESR INDP OCCP
 ################################## AA Properties ##################################
 aa.property.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/aa.properties
 
-aa.command.java = @ROOT.DIR@/model/lib/java8/jre/bin/java.exe
+aa.command.java = @ROOT.DIR@/model/lib/java17/jre/bin/java.exe
 # 3000m might be all that's required, but we have a lot more memory nowadays so lets use it.
 aa.command.max.heap.size = 6000m
 aa.command.log4j.config.file = info_log4j_aa.xml
@@ -394,6 +394,8 @@ aa.command.class = com.hbaspecto.oregon.pecas.aa.OregonAAControl
 aa.base.year = 19
 aa.reference.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 aa.base.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
+# Update the base year for AA data
+aa.activitytotals.base.year = 19
 
 ald.input.data = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@ALD.LAST.RUN@/
 
@@ -404,6 +406,7 @@ spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG1.LAST.R
 aa.floorspace.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.current.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.previous.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/
+aa.activitytotalsi.technologyoptionsi.dir=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/
 
 skim.data =@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/
 Model.skimFormat = zmx
@@ -422,6 +425,8 @@ aa.updateImportsAndExports=false
 aa.technologyScaling=true
 aa.visum=true
 aa.doInputProcessing=false
+aa.updateActivityAndTechnology=true
+aa.usePutTaxes = false
 
 # Alternate property if you want to build your own PECASZonesI.csv file manually and not have it clobbered.
 # aa.buildZoneFiles=false
