--- a/root/scenario/inputs/t26/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t26/globalTemplateUpdate.properties
@@ -2,3 +2,15 @@ ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.IN
 ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_0_01_HIST_00_2016.ver
 ta.los.info = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t26/losInfo.csv
 fareZoneFares.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t26/IntraCityTransitFares.csv
+# Update the java needs of AA
+aa.command.java = @ROOT.DIR@/model/lib/java8_new/jre/bin/java.exe
+aa.command.classpath = @ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/commons-math3-3.4.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/PecasV2.13_r10963.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/censusdata_r2348.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/common-base_r10442.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/or124.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/mtj.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/netlib-java-0.9.3.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/arpack_combined_all.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-1.2-api-2.17.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-core-2.17.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/log4j-api-2.17.1.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/postgresql-42.2.18.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/simple_orm_r10442.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/ref_r1573.jar;@ROOT.DIR@/@SCENARIO.NAME@/model/code/aa/oregonPP_r11140.jar;@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/;@ROOT.DIR@/@SCENARIO.NAME@/model/config
+
+# Update the base year for AA data
+aa.activitytotalsi.technologyoptionsi.dir=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t26/
+
+# Update aa configuration
+aa.activitytotals.base.year = 26
+aa.updateImportsAndExports=false
+aa.technologyScaling=false
+aa.updateActivityAndTechnology=false
