Updated PopulationSim setup with bugs resolved and made it more dependent on ACS and NED

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -253,6 +253,7 @@ spg1.write.frequency.tables = false
 
 #file location for PUMA ALPHA cross-walk
 puma.beta.alpha.xwalk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/puma_beta_alpha_xwalk.csv
+spg1.alpha2beta = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
 #file location for household size distribution
 hh.size.distribution = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/hh_dist.csv
 
@@ -301,7 +302,7 @@ spg2.geo.cross.walk = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.IN
 
 
 # file location for workers per household marginals - base year until 2000
-spg1.workers.per.household.marginals = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/workersPerHouseholdMarginalxYEAR.csv
+#spg1.workers.per.household.marginals = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/workersPerHouseholdMarginalxYEAR.csv
 
 # file location for jobs per worker factors - base year until 2000 - values set to 1 with NED update
 spg1.workers.per.job.factors = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/JobsToWorkersFactor.csv
@@ -345,7 +346,7 @@ spg.income.size.hh.size.upper.bounds = 2
 
 spg.use.acs = true
 acs.sw.occupation.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009.csv
-acs.sw.occupation.correspondence.edited.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2005_2009_forPopSim.csv
+acs.sw.occupation.correspondence.edited.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_occupation_2013_2017_forPopSim.csv
 #acs.sw.industry.correspondence.file.name = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/acs_industry_2005_2009.csv
 
 acs.household.file.CA = @ROOT.DIR@/model/census/ss09hca.csv
