AA update - Removed the year filtering and updated the globalTemplate.properties with the new location for AA activity totals and technology scalings location. Issue #125

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -407,7 +407,7 @@ spg.input.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@POPSIMSPG1.LAST.R
 aa.floorspace.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.current.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/
 aa.previous.data=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@AA.LAST.RUN@/
-aa.activitytotalsi.technologyoptionsi.dir=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/
+aa.activitytotalsi.technologyoptionsi.dir=@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/
 
 skim.data =@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/
 Model.skimFormat = zmx
