Added functionality in PopulationSimSPG to inovke R script after PopulatoinSim setup is created to modify seed data or PopulationSim setup in general. Issue #126

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -268,6 +268,12 @@ hseed_ca = @ROOT.DIR@/model/census/psam_h06.csv
 seed.households = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_households.csv
 seed.persons = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/parameters/PopulationSimBase/seed_persons.csv
 
+# SPG seed update properties (use R script to update seed data)
+# Year to be specified for when the R script should be called
+# Update the year property in globalTemplateUpdate.properties file.
+spg.update.seed.year = 0
+spg.update.seed.script = @ROOT.DIR@/@SCENARIO.NAME@/model/code/update_seed.R
+
 ## SPG2 related properties
 spg2.num.processors = 10
 spg2.max.iterations = 200
