Updated the global template properties file, inputs, and the run_ct.R script to reflect the new CT model. Issue #88, Issue #129

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -687,42 +687,28 @@ ct.logfile = ct_run.log
 ct.cluster.logfile = ct_cluster.log
 
 # CT Input files from other modules
-pecas.makeuse = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/MakeUse.csv
-ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
-pecas.zonal.employment = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Employment.csv
+pecas.makeuse = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/MakeUse.csv
+ct.alpha2beta = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
+pecas.zonal.employment = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/Employment.csv
 ct.distance.skims =@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1dist.zmx
 ct.travel.time.skims = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@TA.LAST.RUN@/pktrk1time.zmx
-ct.alpha2beta = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
-ct.synthetic.population = &@ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
+ct.alpha2beta = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/alpha2beta.csv
+ct.synthetic.population = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SynPop_Taz_Summary.csv
 
 # CT input paramters
-faf.flow.data               = &@ROOT.DIR@/model/faf/FAF4.5.1.csv
-ct.destination.utilities    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
-#ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_or_outer_regions.csv
-ct.oregon.outer.regions     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_regions.csv
-ct.external.gateways        = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_external_station_equivalencies.csv
-ct.generation.probabilities = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
-ct.intermodal.connectors    = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
-ct.sector.equivalencies     = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
-ct.temporal.factors         = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
-ct.trip.length.targets      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
-ct.cvs.payload.wt.dist      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_payload_weight_distributions.csv
-ct.cvs.stop.pattern.freq      = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_stop_pattern_frequencies.csv
-faf.empty.truck.factors       = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_empty_truck_factors.csv
-faf.truck.allocation.factors  = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_allocation_factors.csv
-faf.truck.equivalency.factors = &@ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_equivalency_factors.csv
-
-faf.value.deflator             = 0.938
-faf.external.scaling.factor    = 2.5
-ct.random.seed                 = 630730
-ct.extended.trace              = FALSE
-ct.target.week                 = 23
-ct.target.day                  = 4
-ct.weeks.per.year              = 50
-ct.oregon.regions              = 411,419
-ct.external.scaling.factor     = 2.41
-ct.maximum.resampling.attempts = 100
-ct.maximum.resampling.threshold= 1
+faf.flow.data               = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/prebuild_faf_multiyear.csv.xz
+ct.destination.utilities    = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_destination_utilities.csv
+ct.generation.probabilities = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_local_generation_probabilities.csv
+ct.intermodal.connectors    = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_intermodal_connectors.csv
+ct.sector.equivalencies     = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_sector_categories.csv
+ct.temporal.factors         = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_truck_temporal_distributions.csv
+ct.trip.length.targets      = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/ct_trip_length_targets.csv
+ct.cvs.payload.wt.dist      = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_payload_weight_distributions.csv
+ct.cvs.stop.pattern.freq      = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/cvs_stop_pattern_frequencies.csv
+faf.external.constraints       = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf_external_constraints.csv
+faf.truck.allocation.factors  = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_allocation_factors.csv
+faf.external.equivalencies    = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf_external_equivalencies.csv
+faf.through.equivalencies     = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf_through_equivalencies.csv
 
 ################################## ET Properties ##################################
 
