Added back the value deflator in the CT model. It should address the issue #129.

--- a/root/scenario/inputs/globalTemplate.properties
+++ b/root/scenario/inputs/globalTemplate.properties
@@ -709,6 +709,8 @@ faf.external.constraints       = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/fa
 faf.truck.allocation.factors  = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf4_truck_allocation_factors.csv
 faf.external.equivalencies    = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf_external_equivalencies.csv
 faf.through.equivalencies     = @ROOT.DIR@/@SCENARIO.NAME@/inputs/parameters/faf_through_equivalencies.csv
+# The following value deflator will deflate the values from FAF value year (2017) to model year (2009)
+faf.value.deflator             = 0.875
 
 ################################## ET Properties ##################################
 
