Closing #141 and #142. also addressing decreasing AOC into time due to EV fleet shift, and increasing truck PCE from 1.0 to 1.7, along with updating to the latest network version names

--- a/root/scenario/inputs/t55/globalTemplateUpdate.properties
+++ b/root/scenario/inputs/t55/globalTemplateUpdate.properties
@@ -1,2 +1,5 @@
-ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM26_0_01_COM_00_2045.ver
-ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_0_01_COM_00_2045.ver
+ta.base.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.INPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_02_COM_00_2045.ver
+ta.version.file = @ROOT.DIR@/@SCENARIO.NAME@/@SCENARIO.OUTPUTS@/t@CURRENT.INTERVAL@/SWIM26_1_02_COM_00_2045.ver
+
+# auto operating cost
+auto.operating.cost =  0.13
